# slm-enterprise-ai-platform

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_COMPLETE.md  INDEX.md  LEARNING_RESOURCES.md  PHASE_1_COMPLETE.md  QUICK_START.md  README.md  verify_build.sh
.github/workflows/: update-schemas.yml
agents/ansible_agent/: config.yaml  main.py  manifest.json  prompts.py  tools.py
agents/github_actions_agent/: config.yaml  main.py  manifest.json  prompts.py  tools.py
agents/log_analysis_agent/: README.md  config.yaml  main.py  manifest.json  prompts.py
agents/monitoring_agent/: config.yaml  main.py  manifest.json  prompts.py  tools.py
agents/nutanix_agent/: config.yaml  main.py  manifest.json  prompts.py  tools.py
agents/servicenow_agent/: config.yaml  main.py  prompts.py  (+1 more)
backend/: .env.example  .env.linux.example  .env.windows.example  README.md  pyproject.toml  setup_dev.ps1  setup_dev.sh  setup_norust.sh
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py  exceptions.py  logging_config.py
backend/app/core/slm/: __init__.py  engine.py  service.py
backend/app/models/: __init__.py  chat_models.py  memory_models.py
backend/app/security/: __init__.py
backend/app/services/: agent_registry.py  memory_repository.py  plugin_manager.py
backend/tests/: __init__.py  test_plugin_manager.py  test_routes.py  test_security.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: agent_resource_registry.json  download_model.py  update_agent_schemas.py
(+23 files in other folders)
